@@ -1,5 +1,0 @@
-from .. import NOT_FOUND
-
-
-def test_not_found():
-    assert repr(NOT_FOUND) == '<NOT_FOUND>'
